# nupp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
include/nupp/: algorithm.hpp  mask_iterator.hpp  pow2_t.hpp
include/nupp/__detail/: algorithm_impl.hpp
test/: CMakeLists.txt  algorithm_tests.cpp  mask_iterator_tests.cpp  pow2_tests.cpp
